# gnarwl

./: Makefile.am  Makefile.in  conf.h.in  configure  configure.ac
data/: gnarwl.cfg.in
doc/: damnit.8.in  gnarwl.8.in
src/: config.c  dbaccess.c  gnarwl.c  gnarwl.h  mailhandler.c  util.c
